add_executable(combine 2.combine.cc)
target_link_libraries(combine algorithms)

add_executable(phone_number_map 5.phone_number_map_combine.cc)
target_link_libraries(phone_number_map algorithms)

add_executable(combine_sum 7.combine_sum.cc)
target_link_libraries(combine_sum algorithms)


add_executable(the_range_of_motion_of_the_robot the_range_of_motion_of_the_robot.cc)
target_link_libraries(the_range_of_motion_of_the_robot algorithms)

add_executable(9.split_palindrome_string 9.split_palindrome_string.cc)
target_link_libraries(9.split_palindrome_string algorithms)