add_executable(climb_stairs 4.climb_stairs.cc)
target_link_libraries(climb_stairs algorithms)

add_executable(7.different_path 7.different_path.cc)
target_link_libraries(7.different_path algorithms)

add_executable(9.differrent_BST 9.differrent_BST.cc)
target_link_libraries(9.differrent_BST algorithms)

add_executable(12.01_backpack_problem 12.01_backpack_problem.cc)
target_link_libraries(12.01_backpack_problem algorithms)